Update HW 1. Python Basics (1).ipynb

--- a/HW 1. Python Basics (1).ipynb
+++ b/HW 1. Python Basics (1).ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "# Домашнє завдання до теми \"Python Basics\"\n",
-    "В цьому ДЗ важливою умовою виконання завдань є те, що ми не імпортуємо жодних бібліотек, а робимо все на чистому Python, використовуючи лише базовий функціонал. Це необхідно аби відпрацювати роботу з базовими типами даних. А використовувати бібліотеки ми ще навчимось далі :)"
+    "(a change made for practice)В цьому ДЗ важливою умовою виконання завдань є те, що ми не імпортуємо жодних бібліотек, а робимо все на чистому Python, використовуючи лише базовий функціонал. Це необхідно аби відпрацювати роботу з базовими типами даних. А використовувати бібліотеки ми ще навчимось далі :)"
    ]
   },
   {
